# dj-set-downloader

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  PYTHON_CLIENT_SETUP.md  README.md  bug_fix_summary.md  docker-compose.yml  go.mod  go.sum  main.go  openapi.yaml
.github/workflows/: ci.yml  codeql.yml  go-test.yml  openapi.yml  publish-client.yml  publish-python-client.yml  validate-python-client.yml
clients/: README.md  openapi-generator-config.yaml
cmd/: main.go
cmd/server/: main.go
config/: config.go  config.yaml  config_test.go
dj_set_downloader_client/: CHANGELOG.md  README.md  example_usage.py  pyproject.toml
dj_set_downloader_client/dj_set_downloader_api_client/: __init__.py
dj_set_downloader_client/dj_set_downloader_api_client/api/jobs/: get_api_jobs.py  post_api_process.py
dj_set_downloader_client/dj_set_downloader_api_client/api/utility/: get_health.py
dj_set_downloader_client/dj_set_downloader_api_client/models/: __init__.py  domain_track.py  domain_tracklist.py  job_request.py  job_response.py  job_status.py  progress_event.py  progress_stage.py  progress_track_details.py  server_error_response.py  server_message_response.py
djset/: interface.go  processor.go  processor_test.go
docs/: docs.go  swagger.json  swagger.yaml
internal/audio/: ffmpeg.go  ffmpeg_test.go  interface.go  splitter.go  utils_test.go
internal/djset/: interface.go  processor.go
internal/domain/: config.go  progress.go  track.go  track_test.go
openapi/: docs.go  openapi.json  openapi.yaml  swagger.json  swagger.yaml
pkg/: config.go  track.go
scripts/: install-hooks.sh  pre-commit.sh  release.sh
tracklistsearch/: 1001tracklists.go  1001tracklists_test.go  interface.go  website.go  website_test.go
(+57 files in other folders)
